--- a/web/index.html
+++ b/web/index.html
@@ -2,24 +2,23 @@
 <html lang='en'>
     <head>
         <meta charset='utf-8'>
-        <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"/>
+        <meta name="viewport" content="width=device-width,minimum-scale=1"/>
         <title>Armory3D Examples Browser</title>
-        <base href="./">
-        <link rel='icon' href='favicon.ico'>
+        <link rel='icon' href='https://armory3d.org/favicon.ico'>
         <link rel="stylesheet" href="app.css">
         <script src="app.js" async></script>
     </head>
     <body>
+        <header>
+            <h1 id="title">ARMORY3D EXAMPLES BROWSER</h1>
+        </header>
         <nav>
-            <input type="search" placeholder="..." maxlength="64">
+            <input type="search" placeholder="…" maxlength="64" autocapitalize="off" autocorrect="off" spellcheck="false">
             <ol class="examples"></ol>
         </nav>
         <main>
-            <iframe scrolling="no" frameborder="0" width="960" height="540" allowfullscreen allowvr></iframe>
-            <div class="meta">
-                <h1 id="example-title">Armory Examples</h1>
-                <a href="https://github.com/armory3d/armory_examples/tree/master/animation">https://armory3d.org/</a>
-            </div>
+            <iframe id="frame" scrolling="no" frameborder="0" width="100%" height="100%" allowfullscreen allowvr></iframe>
+            <a id="source-link" href="">&lt;/&gt;</a>
         </main>
     </body>
 </html>
