--- a/web/index.html
+++ b/web/index.html
@@ -10,11 +10,11 @@
     </head>
     <body>
         <header>
-            <h1 id="title">ARMORY3D EXAMPLES BROWSER</h1>
+            <h1 id="title">Armory3D Examples Browser</h1>
         </header>
         <nav>
             <input type="search" placeholder="…" maxlength="64" autocapitalize="off" autocorrect="off" spellcheck="false">
-            <ol class="examples"></ol>
+            <ol class="projects"></ol>
         </nav>
         <main>
             <iframe id="frame" scrolling="no" frameborder="0" width="100%" height="100%" allowfullscreen allowvr></iframe>
