--- a/web/index.html
+++ b/web/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang='en'>
     <head>
+
         <meta charset='utf-8'>
-        <meta name="viewport" content="width=device-width,minimum-scale=1"/>
+        <meta name="viewport" content="width=device-width,minimum-scale=1">
+
+        <meta name="twitter:title" content="Armory3D Examples Browser">
+        <meta name="twitter:description" value="Serious Fucking Business">
+        <meta name="twitter:image" content="https://armory3d.org/img/Logo.png">
+
         <title>Armory3D Examples Browser</title>
+
         <link rel='icon' href='https://armory3d.org/favicon.ico'>
         <link rel="stylesheet" href="app.css">
+
         <script src="app.js" async></script>
+
     </head>
     <body>
         <header>
@@ -18,6 +27,7 @@
         </nav>
         <main>
             <iframe id="frame" scrolling="no" frameborder="0" width="100%" height="100%" allowfullscreen allowvr></iframe>
+            <div id="project-readme"></div>
             <a id="source-link" href="">&lt;/&gt;</a>
         </main>
     </body>
