--- a/web/index.html
+++ b/web/index.html
@@ -18,17 +18,12 @@
 
     </head>
     <body>
-        <header>
+       <!--  <header>
             <h1 id="title">Armory3D Examples Browser</h1>
         </header>
-        <nav>
-            <input type="search" placeholder="…" maxlength="64" autocapitalize="off" autocorrect="off" spellcheck="false">
-            <ol class="projects"></ol>
-        </nav>
-        <main>
-            <iframe id="frame" scrolling="no" frameborder="0" width="100%" height="100%" allowfullscreen allowvr></iframe>
-            <div id="project-readme"></div>
-            <a id="source-link" href="">&lt;/&gt;</a>
-        </main>
+        <!-- <div id="controls" style="background:black">CORLS</div> -->
+        <!-- <div id="info" style="background:black">PROJECT</div> -->
+        <iframe id="project" scrolling="no" frameborder="0" width="100%" height="100%" allowfullscreen allowvr></iframe>
+        <div id="project-readme"></div>
     </body>
 </html>
