--- a/web/index.html
+++ b/web/index.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
 <html lang='en'>
     <head>
-
         <meta charset='utf-8'>
         <meta name="viewport" content="width=device-width,minimum-scale=1">
-
         <meta name="twitter:title" content="Armory3D Examples Browser">
         <meta name="twitter:description" value="Serious Fucking Business">
         <meta name="twitter:image" content="https://armory3d.org/img/Logo.png">
-
         <title>Armory3D Examples Browser</title>
-
         <link rel='icon' href='https://armory3d.org/favicon.ico'>
+        <link rel="stylesheet" href="icons.css">
         <link rel="stylesheet" href="app.css">
-
         <script src="app.js" async></script>
-
     </head>
     <body>
-       <!--  <header>
-            <h1 id="title">Armory3D Examples Browser</h1>
-        </header>
+        <nav>
+            <input type="search" placeholder="…" maxlength="64" autocapitalize="off" autocorrect="off" spellcheck="false">
+            <ol class="projects"></ol>
+        </nav>
         <!-- <div id="controls" style="background:black">CORLS</div> -->
         <!-- <div id="info" style="background:black">PROJECT</div> -->
         <iframe id="project" scrolling="no" frameborder="0" width="100%" height="100%" allowfullscreen allowvr></iframe>
