--- a/web/index.html
+++ b/web/index.html
@@ -30,5 +30,6 @@
                 <div class="readme markdown"></div>
             </div>
         </main>
+        <footer><a href="https://armory3d.org/">https://armory3d.org/</a></footer>
     </body>
 </html>
