--- a/web/index.html
+++ b/web/index.html
@@ -30,6 +30,9 @@
                 <div class="readme markdown"></div>
             </div>
         </main>
-        <footer><a href="https://armory3d.org/">https://armory3d.org/</a></footer>
+        <footer>
+            <a href="https://armory3d.org/">ARM</a>
+            <a href="https://github.com/tong/armory_examples_browser">SRC</a>
+        </footer>
     </body>
 </html>
