--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,7 @@
             <h1>Armory3D</h1>
         </header>
         <nav class="sidebar">
+            <img src="img/armory-512.png" alt="Armory3D">
             <input type="search" placeholder="Search …" maxlength="64" autocapitalize="off" autocorrect="off" spellcheck="false">
             <ol id="project-groups"></ol>
             <!-- <div id="project-controls">
@@ -25,9 +26,11 @@
             </div> -->
         </nav>
         <main>
-            <iframe class="project" scrolling="no" frameborder="0" allowfullscreen allowvr></iframe>
+            <iframe class="project" scrolling="no" frameborder="0" allowfullscreen allowvr>
+            </iframe>
             <div class="meta">
-                <div class="readme markdown"></div>
+                <div class="readme markdown">
+                </div>
             </div>
         </main>
         <footer>
