--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,9 @@
             <h1>Armory3D</h1>
         </header>
         <nav class="sidebar">
-            <img src="img/armory-512.png" alt="Armory3D">
+            <a href="" class="logo">
+                <img src="img/armory-512.png" alt="Armory3D">
+            </a>
             <input type="search" placeholder="Search …" maxlength="64" autocapitalize="off" autocorrect="off" spellcheck="false">
             <ol id="project-groups"></ol>
             <!-- <div id="project-controls">
