--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
         <meta charset='utf-8'>
         <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
         <meta name="twitter:title" content="Armory3D Examples Browser">
-        <meta name="twitter:description" value="Serious Fucking Business">
+        <meta name="twitter:description" value="Armory3D Examples Browser">
         <meta name="twitter:image" content="https://armory3d.org/img/Logo.png">
         <title>Armory3D Examples Browser</title>
         <link rel='icon' href='https://armory3d.org/favicon.ico'>
