Add links to repositories

--- a/web/start.html
+++ b/web/start.html
@@ -37,27 +37,31 @@
         </header>
         <main>
             <section>
+                <h4>Example Projects</h4>
                 <ul>
-                    <li><a href="https://github.com/armory3d/armory_tutorials">→ https://github.com/armory3d/armory_tutorials</a></li>
-                    <li><a href="https://github.com/armory3d/armory_templates">→ https://github.com/armory3d/armory_templates</a></li>
-                    <li><a href="https://github.com/armory3d/armory_examples">→ https://github.com/armory3d/armory_examples</a></li>
+                    <li><a href="https://github.com/armory3d/armory_tutorials">→ github.com/armory3d/armory_tutorials</a></li>
+                    <li><a href="https://github.com/armory3d/armory_templates">→ github.com/armory3d/armory_templates</a></li>
+                    <li><a href="https://github.com/armory3d/armory_examples">→ github.com/armory3d/armory_examples</a></li>
                 </ul>
             </section>
-<!--             <section>
+            <section>
+                <h4>ARMSDK repositories</h4>
                 <ul>
-                    <li><a href="https://github.com/armory3d/armory">→ https://github.com/armory3d/armory</a></li>
-                    <li><a href="https://github.com/armory3d/Kha">→ https://github.com/armory3d/Kha</a></li>
-                    <li><a href="https://github.com/armory3d/iron">→ https://github.com/armory3d/iron</a></li>
-                    <li><a href="https://github.com/armory3d/armory2d">→ https://github.com/armory3d/armory2d</a></li>
-                    <li><a href="https://github.com/armory3d/haxebullet">→ https://github.com/armory3d/haxebulletarmory2d</a></li>
+                    <li><a href="https://github.com/armory3d/armory">→ github.com/armory3d/armory</a></li>
+                    <li><a href="https://github.com/armory3d/Kha">→ github.com/armory3d/Kha</a></li>
+                    <li><a href="https://github.com/armory3d/iron">→ github.com/armory3d/iron</a></li>
+                    <li><a href="https://github.com/armory3d/armory2d">→ github.com/armory3d/armory2d</a></li>
+                    <li><a href="https://github.com/armory3d/haxebullet">→ github.com/armory3d/haxebullet</a></li>
+                    <li><a href="https://github.com/armory3d/haxerecast">→ github.com/armory3d/haxerecast</a></li>
+                    <li><a href="https://github.com/armory3d/zui">→ github.com/armory3d/zui</a></li>
                 </ul>
-             </section> -->
-           <!--  <section>
+             </section>
+            <section>
+                <h4>Browser Source</h4>
                 <ul>
-                    <li><a href="https://github.com/armory3d/armorcore">→ https://github.com/armory3d/armorcore</a></li>
-                    <li><a href="https://github.com/armory3d/armorbase">→ https://github.com/armory3d/armorbase</a></li>
+                    <li><a href="https://github.com/armory3d/armory_examples_brower">→ github.com/armory3d/armory_examples_brower</a></li>
                 </ul>
-             </section> -->
+            </section>
         </main>
     </body>
 </html>
